--- a/templates/admin/category/new.html
+++ b/templates/admin/category/new.html
@@ -1,5 +1,7 @@
 {% extends "./layout.html" %}
 {% block title %}New Category{% endblock %}
+{% set toptitle = "Categories" %}
+{% set quickbuttons=[{"title":"Categories","path":"/admin/categories","icon":""}] %}
 {% block content %}
 <section class="mx-3 my-2" style="overflow-x: auto;">
     <div class="container col-md-8 g-2">
