--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,5 +1,7 @@
 {% extends "./layout.html" %}
 {% block title %}Dashboard{% endblock %}
+{% set toptitle = "Dashboard" %}
+{% set quickbuttons=[{"title":"New","path":"/admin/categories","icon":""}] %}
 {% block content %}
 <section class="mx-3 my-2">
     {% if person %}
