--- a/templates/admin/category/index.html
+++ b/templates/admin/category/index.html
@@ -17,10 +17,12 @@
     <tbody>
         {% for item in category %}
         <tr>
-            <th scope="row">1</th>
+            <th scope="row">{{i}}</th>
             <td>{{item["name"]}}</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <td>
+                {{ "Publish" if item["name"]==1 else "Disabled" }}
+            </td>
+            <td><a href="#">Edit</a> <a href="#">Delete</a></td>
         </tr>
         {% endfor %}
         </tr>
