--- a/templates/admin/blogs/index.html
+++ b/templates/admin/blogs/index.html
@@ -1,11 +1,35 @@
 {% extends "./layout.html" %}
-{% block title %}Dashboard{% endblock %}
+{% block title %}Blogs{% endblock %}
+{% set toptitle = "Blogs" %}
+{% set quickbuttons=[{"title":"New Post","path":"/admin/blogs/new","icon":""}] %}
 {% block content %}
 <section class="mx-3 my-2">
-    {% if person %}
-    <h1>Hello {{ person }}!</h1>
-    {% else %}
-    <h1>Hello, World!</h1>
-    {% endif %}
+    <div class="container">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in postlist %}
+                <tr>
+                    <th scope="row">{{i}}</th>
+                    <td>{{item["name"]}}</td>
+                    <td>
+                        {{ "Publish" if item["name"]==1 else "Disabled" }}
+                    </td>
+                    <td><a href="#">Edit</a> <a href="#">Delete</a></td>
+                </tr>
+                {% endfor %}
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </section>
 {% endblock %}
