--- a/templates/admin/blogs/new.html
+++ b/templates/admin/blogs/new.html
@@ -1,5 +1,7 @@
 {% extends "./layout.html" %}
 {% block title %}New Blogs{% endblock %}
+{% set toptitle = "Blogs" %}
+{% set quickbuttons=[{"title":"Blogs","path":"/admin/blogs","icon":""}] %}
 {% block content %}
 <section class="mx-3 my-2" style="overflow-x: auto;">
     <div class="container contact-form">
@@ -14,7 +16,11 @@
                         <input type="text" name="title" class="form-control" placeholder="Your Title` *" value="" />
                     </div>
                     <div class="form-group my-2">
-                        <input type="text" name="category" class="form-control" placeholder="Your Category *" value="" />
+                        <select class="form-control" name="category">
+                            {% for item in category %}
+                            <option value="{{item['name']}}">{{item['name']}}</option>
+                            {% endfor %}
+                        </select>
                     </div>
                     <div class="form-group my-2">
                         <input type="text" name="tags" class="form-control" placeholder="Your Tags *"
